2012-03-16  Murray Cumming  <murrayc@murrayc.com>

	Update GimpRuler from the Gimp source code.

	With the same changes to make it build in Glom.

1.21.7:

2012-03-14  Murray Cumming  <murrayc@murrayc.com>

	set_document(), init() methods: Avoid the appearance that these are virtual.

	* glom/application.cc:
	* glom/appwindow.[h|cc]:
	* glom/base_db.h:
	* glom/base_db_table.h:
	* glom/import_csv/dialog_import_csv_progress.h:
	* glom/mode_data/box_data.h:
	* glom/mode_data/box_data_calendar_related.cc:
	* glom/mode_data/box_data_details.[h|cc]:
	* glom/mode_data/box_data_list.cc:
	* glom/mode_data/box_data_list_related.cc:
	* glom/mode_data/datawidget/dialog_choose_id.h:
	* glom/mode_data/datawidget/dialog_new_record.h:
	* glom/mode_design/layout/dialog_layout.[h|cc]:
	* glom/mode_design/layout/dialog_layout_calendar_related.[h|cc]:
	* glom/mode_design/layout/dialog_layout_details.[h|cc]:
	* glom/mode_design/layout/dialog_layout_list_related.[h|cc]:
	* glom/mode_find/box_data_details_find.h:
	* glom/print_layout/canvas_print_layout.cc:
	This fixes warnings found by clang++.

2012-03-14  Murray Cumming  <murrayc@murrayc.com>

	FlowTable::add(): Rename to add_widgets().

	* glom/mode_data/flowtablewithfields.cc:
	* glom/utility_widgets/flowtable.[h|cc]: This avoids a clash with 
	Gtk::Widget::add(), which is virtual, but takes different parameters.
	This fixes warnings found by clang++.

2012-03-14  Murray Cumming  <murrayc@murrayc.com>

	Dialog_ImportCSVProgress: rename a signal handler.

	* glom/import_csv/dialog_import_csv_progress[h|cc]: Avoid a clash with 
	a virtual method of the same name in Gtk::Widget.
	This fixes warnings found by clang++.

2012-03-14  Murray Cumming  <murrayc@murrayc.com>

	Make sure that get_appwindow() overrides are const.

	* glom/mode_data/buttonglom.[h|cc]:
	* glom/mode_data/datawidget/checkbutton.[h|cc]:
	* glom/mode_data/datawidget/combo.[h|cc]:
	* glom/mode_data/datawidget/combo_as_radio_buttons.[h|cc]: